Kubernetes/dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vmfrontend-dev
  namespace: vima-project-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vmfrontend-dev
  template:
    metadata:
      labels:
        app: vmfrontend-dev
    spec:
      containers:
        - name: vmfrontend-dev
          image: gcr.io/cubs-consulting/vmfrontend
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: ".5"
              memory: "500Mi"
            requests:
              cpu: ".25"
              memory: "250Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: vmfrontend-dev-nodeport
  namespace: vima-project-dev
spec:
  selector:
    app: vmfrontend-dev
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vmfrontend-dev-ingress
  namespace: vima-project-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vmfrontend-dev
    networking.gke.io/managed-certificates: vmfrontend-dev-certificate
#    kubernetes.io/ingress.allow-http: "false"
spec:
  backend:
    serviceName: vmfrontend-dev-nodeport
    servicePort: 80
